Update back button on preferences

--- a/src/app/core/components/guidemodal/guidemodal.component.html
+++ b/src/app/core/components/guidemodal/guidemodal.component.html
@@ -4,7 +4,7 @@
       <p class="description" *ngFor="let desc of description; let i = index">
         {{ desc }}
       </p>
-      <ion-button (click)="closeModal()">OK</ion-button>
+      <ion-button mode="ios" (click)="closeModal()">OK</ion-button>
   </div>
 
 </ion-content>
