--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="false" class="ion-no-border">
     <ion-toolbar>
 		<ion-buttons mode="ios" slot="start" (click)="prevStage()">
-			<ion-back-button></ion-back-button>
+			<ion-button *ngIf="page > 1" (click)="showPrevMeal()">< Previous</ion-button>
 		</ion-buttons>
 		<img class="logo" src="../../../../../assets/images/header-logo.svg">
 	</ion-toolbar>
@@ -15,7 +15,6 @@
 			<onboarding-progress [showOverall]="false"></onboarding-progress>
 			<div class="total-progress">PART 1: Meal Preferences ({{ page }} of {{ mealPreferenceOptions?.length }})</div>
 		</div>
-		<div class="meal-nav"><button class="butt-previous" *ngIf="activeSlide > 0" (click)="showPrevMeal()">< Show previous meal</button></div>
 		<h1 class="content-prompt">Meal Preferences</h1>
 		<div class="slide-options">
 			<ion-slides #mealSlides noSwiping (ionSlideDidChange)="setPagerNum()" [options]="{ allowTouchMove: false, autoHeight: true }">
