--- a/src/app/views/onboarding/pages/onboarding-surprisepreferences/onboarding-surprisepreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-surprisepreferences/onboarding-surprisepreferences.component.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true" class="ion-no-border">
 	<ion-toolbar>
 		<ion-buttons mode="ios" slot="start" (click)="prevStage()">
-			<ion-back-button></ion-back-button>
+			<ion-button *ngIf="page > 1" (click)="showPrevMeal()">< Previous</ion-button>
 		</ion-buttons>
 		<img class="logo" src="../../../../../assets/images/header-logo.svg">
 	</ion-toolbar>
@@ -17,7 +17,6 @@
 			<onboarding-progress [showOverall]="false"></onboarding-progress>
 			<div class="total-progress">PART 3: Meal Preferences ({{ page }} of {{ surprisePreferenceOptions?.length }})</div>
 		</div>
-		<div class="meal-nav"><button class="butt-previous" *ngIf="activeSlide > 0" (click)="showPrevMeal()">< Show previous meal</button></div>
 		<h1 class="content-prompt">Meal Preferences</h1>
 		<div class="slide-options">
 			<ion-slides #surpriseSlides (ionSlideDidChange)="setPagerNum()" [options]="{ allowTouchMove: false, autoHeight: true }">
@@ -37,11 +36,13 @@
 								</div>
 							</div>
 							<p class="description-detail">
-								<span class="">
-									<span *ngFor="let ingredient of meal.ingredients; let i = index">
-										{{ ingredient }}<span *ngIf="meal.ingredients.length - 1 > i">, </span>
-									</span>
-								</span>
+								<ion-grid>
+									<ion-row no-padding>
+										<ion-col size="6" *ngFor="let ingredient of meal.ingredients; let i = index" [ngClass]="{'not-display': i >= 10}">
+											<span>{{ ingredient }}</span>
+										</ion-col>
+									</ion-row>
+								</ion-grid>
 							</p>
 							<p class="description-detail show-more" ><span (click)="openIngredients(meal)">SHOW DETAILS</span></p>
 							<div class="question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'disabled': question.disabled}">
@@ -51,7 +52,7 @@
 									<div class="title">{{ option.title }}</div>
 								</div>
 							</div>
-							<ion-button class="next" (click)="showNextMeal(mealIndex)">Next Meal</ion-button>
+							<ion-button mode="ios" class="next" (click)="showNextMeal(mealIndex)">Next Meal</ion-button>
 							<!--<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
 								<ion-button *ngFor="let option of question.options; let optionIndex = index" [disabled]="question.disabled" (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
