--- a/src/app/views/splash/splash.page.html
+++ b/src/app/views/splash/splash.page.html
@@ -1,7 +1,7 @@
 <ion-content no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="vertical-center">
     <div class="center">
-      <ion-spinner name="bubbles"></ion-spinner>
+      <ion-spinner name="crescent" color="primary"></ion-spinner>
     </div>
   </div>
 </ion-content>
