button disabled until all meals are selected

--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -40,7 +40,7 @@
             </ion-label>
         </ion-item>-->
         <div class="button-wrap">
-            <button class="butt-confirm" (click)="setWeekStartDate()">Confirm Meal Plan</button>
+            <button class="butt-confirm" [ngClass]="{'disabled': !isAllMealSelected }" [disabled]="!isAllMealSelected" (click)="setWeekStartDate()">Confirm Meal Plan</button>
             <!--<ion-button mode="ios" color="primary" (click)="setWeekStartDate()">Confirm</ion-button>-->
         </div>
     </div>
