--- a/src/global.scss
+++ b/src/global.scss
@@ -182,6 +182,10 @@
                 padding-top: 11px;
                 padding-bottom: 12px;
             }
+
+            .description-detail, .description-detail ion-col {
+                padding: 0;
+            }
         }
 
         ion-card-title {
@@ -675,7 +679,17 @@ p {
 }
 
 .not-display {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    padding: 0;
+}
+
+.expand-ingredient {
+    visibility: visible;
+    opacity: 1;
+    height: auto;
+    transition: visibility 0s, height 0.5s linear, opacity 0.5s linear;
 }
 
 h1 {
@@ -729,6 +743,7 @@ h1 {
 }
 
 .meal-details {
+    margin-top: 20px;
     margin-bottom: 20px;
     text-align: left;
 
@@ -765,6 +780,27 @@ h1 {
 
     }
 
+}
+
+.description-detail {
+    padding-top: 0px;
+    padding-bottom: 0px;
+
+    ion-grid, ion-col {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    &.show-more span, .prev-question span {
+        font-family: var(--font-family-show-more-button);
+        font-style: var(--font-style-show-more-button);
+        font-weight: var(--font-weight-show-more-button);
+        font-size: 14px;
+        line-height: 17px;
+        text-transform: uppercase;
+    
+        color: var(--ion-color-primary);    
+    }
 }
 
 .invalid {
