--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.scss
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.scss
@@ -7,6 +7,8 @@
 
 .content {
     margin: 29px;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 .header {
@@ -27,7 +29,12 @@ p {
     font-style: var(--font-style-body);
 }
 
+.ingredients {
+    padding-bottom: 120px;
+}
+
 .ingredient-item {
+    margin-bottom: 10px;
     .text {
         vertical-align: bottom;
         color: var(--ion-color-font-main);
