--- a/src/global.scss
+++ b/src/global.scss
@@ -98,6 +98,16 @@
             box-shadow: inset 0px 0px 4px rgba(0, 0, 0, 0.1);
             border-radius: 24px;
             margin: 0 20px;
+            z-index: 1;
+            pointer-events: none;
+        }
+
+        input[type=radio] {
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            margin: 0 20px;
+            opacity: 0;
         }
 
         &.selected {
@@ -215,7 +225,6 @@
         margin: 8px auto;
         //opacity: 1;
         //--opacity: 1;
-
         &.small {
             border-radius: 37px;
             height: 37px;
@@ -798,8 +807,8 @@ h1 {
         font-size: 14px;
         line-height: 17px;
         text-transform: uppercase;
-    
-        color: var(--ion-color-primary);    
+
+        color: var(--ion-color-primary);
     }
 }
 
@@ -810,6 +819,18 @@ h1 {
 
 .safe-top {
     margin-top: env(safe-area-inset-top, 20px)
+}
+
+.button-previous {
+    letter-spacing: normal!important;
+    font-family: 'robotomedium'!important;
+    font-size: 13.3333px!important;
+
+    ion-icon {
+        width: 26px;
+        height: 26px;
+        margin-right: -5px;
+    }
 }
 
 /** Animation **/
