--- a/src/app/core/components/recipemodal/recipemodal.component.html
+++ b/src/app/core/components/recipemodal/recipemodal.component.html
@@ -8,7 +8,7 @@
         <div class="meal-details details-box">
             <div class="detail">
                 <span class="icon cooktime"></span>
-                <span class="text">{{ recipe.cookTime }}</span>
+                <span class="text">{{ recipe.cookTime }} mins</span>
             </div>
             <div class="detail">
                 <span class="icon ingredients"></span>
