--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -32,7 +32,7 @@
                 <div class="meal-details">
                     <div class="detail">
                         <span class="icon cooktime"></span>
-                        <span class="text">{{ meal.recipe.cookTime }}</span>
+                        <span class="text">{{ meal.recipe.cookTime }} mins</span>
                     </div>
                     <div class="detail">
                         <span class="icon ingredients"></span>
