--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -27,7 +27,7 @@
                 <div class="image-wrap"><img src="{{ mealslot.recipe.image }}"></div>
                 <div class="meal-content">
                     <div class="title">{{ mealslot.recipe.title }}</div>
-                    <div class="detail"><div class="icon cooktime"></div>20 mins</div>
+                    <div class="detail"><div class="icon cooktime"></div>{{ mealslot.recipe.cookTime }} mins</div>
                     <div class="detail"><div class="icon ingredients"></div><div class="link" (click)="openIngredients(mealslot.recipe)">View Ingredients</div></div>
                 </div>
             </div>
