--- a/src/app/views/onboarding/pages/onboarding-surprisepreferences/onboarding-surprisepreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-surprisepreferences/onboarding-surprisepreferences.component.html
@@ -52,7 +52,7 @@
 									<div class="title">{{ option.title }}</div>
 								</div>
 							</div>
-							<ion-button mode="ios" class="next" (click)="showNextMeal(mealIndex)">Next Meal</ion-button>
+							<ion-button mode="ios" class="next" (click)="showNextMeal(mealIndex)" [ngClass]="{'disabled': selectedAnswerNum != meal.questions.length }" >Next Meal</ion-button>
 							<!--<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
 								<ion-button *ngFor="let option of question.options; let optionIndex = index" [disabled]="question.disabled" (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
