--- a/src/global.scss
+++ b/src/global.scss
@@ -242,6 +242,12 @@
             height: 37px;
         }
 
+        &.disabled {
+            --background: #EEEEEE;
+            --background-hover: #EEEEEE;
+            --background-activated: #EEEEEE;
+        }
+
         &::part(button) {
             opacity: 1;
         }
