--- a/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
+++ b/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
@@ -9,7 +9,7 @@
 
       <div class="progress">
         <onboarding-progress [showOverall]="false"></onboarding-progress>
-        <p class="progress-percentage">On Boarding is Complete!</p>
+        <p class="progress-percentage">Nearly complete</p>
       </div>
 
       <div class="content column start content-prompt">
