refactor margin & mealslot.length

--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -19,7 +19,7 @@
 
         <div class="page-info">
             <h1>Meal Plan</h1>
-            <p>Here is your personalised yummy meal plan with {{ mealSlots.length }} meals.</p>
+            <p>Here is your personalised yummy meal plan with {{ mealSlots?.length }} meals.</p>
         </div>
 
         <div class="mealslot" *ngFor="let meal of mealSlots">
