--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -15,7 +15,7 @@
         <ion-spinner name="crescent" color="primary"></ion-spinner>
     </div>
 
-    <div class="content-wrapper column start" *ngIf="!isCompleted && !isLoading">
+    <div class="content-wrapper column start" *ngIf="!isCompleted && !isLoading && mealSlots">
 
         <div class="page-info">
             <h1>Meal Plan</h1>
