refactor forgot password flow

--- a/src/app/views/forgotpassword/forgotpassword.page.html
+++ b/src/app/views/forgotpassword/forgotpassword.page.html
@@ -20,7 +20,7 @@
 			</div>
 
 		</ion-card>
-		<ion-button class="transparent-butt-link" (click)="goTo('login')" >Login</ion-button>
+		<ion-button class="transparent-butt-link" [routerLink]="['/login']" >Login</ion-button>
 
 	</div>
 
