--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -36,7 +36,7 @@
 			</div>
 
 		</ion-card>
-		<ion-button fill="clear" class="transparent-butt-link" (click)="goTo('forgotpassword')" >Forgot Password</ion-button>
+		<ion-button fill="clear" class="transparent-butt-link" [routerLink]="['/forgotpassword']" >Forgot Password</ion-button>
 
 	</div>
 
