refactor modal style

--- a/src/app/views/login/login.page.scss
+++ b/src/app/views/login/login.page.scss
@@ -7,5 +7,9 @@ ion-card-title {
 }
 
 ion-card ion-card-content {
-    padding: 40px 24px;
+    padding: 30px 24px 40px;
+}
+
+ion-segment.ios {
+    height: 35px;
 }
