--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -14,8 +14,10 @@
 
 			<ion-card-content *ngIf="!switchToRegisterForm">
 				<form (ngSubmit)="login()" [formGroup]="loginForm">
-					<ion-input formControlName="email" type="email" placeholder="Username"></ion-input>
+					<ion-input formControlName="email" type="email" placeholder="Email" ></ion-input>
+					<div class="inline-error" [ngClass]="{'is-error': loginForm.get('email').dirty && loginForm.get('email').invalid}">Please enter a valid email address</div>
 					<ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
+					<div class="inline-error" [ngClass]="{'is-error': loginForm.get('password').dirty && loginForm.get('password').invalid}">Password to contain capital, symbol and 8 characters</div>
 					<ion-button mode="ios" type="submit" [disabled]="formDisabled">Login</ion-button>
 					<div class="error" [ngClass]="{'is-error': state === 'error'}">{{ errorMessage }}</div>
 				</form>
@@ -23,9 +25,12 @@
 
 			<ion-card-content *ngIf="switchToRegisterForm">
 				<form (ngSubmit)="register()" [formGroup]="registerForm">
-					<ion-input formControlName="email" type="email" placeholder="Username"></ion-input>
+					<ion-input formControlName="email" type="email" placeholder="Email" ></ion-input>
+					<div class="inline-error" [ngClass]="{'is-error': registerForm.get('email').dirty && registerForm.get('email').invalid}">Please enter a valid email address</div>
 					<ion-input formControlName="password" type="password" placeholder="Password"></ion-input>
-					<ion-input formControlName="confirmPassword" type="password" placeholder="Confirm Password"></ion-input>
+					<div class="inline-error" [ngClass]="{'is-error': registerForm.get('password').dirty && registerForm.get('password').invalid}">Password to contain capital, symbol and 8 characters</div>
+					<ion-input formControlName="confirmPassword" type="password" placeholder="Confirm Password" [ngClass]="{'not-match': registerForm.get('password').value != registerForm.get('confirmPassword').value}"></ion-input>
+					<div class="inline-error" [ngClass]="{'is-error': registerForm.get('confirmPassword').dirty && registerForm.get('password').value != registerForm.get('confirmPassword').value}">Passwords do not match</div>
 					<ion-button mode="ios" type="submit" [disabled]="formDisabled">Register</ion-button>
 					<div class="error" [ngClass]="{'is-error': state === 'error'}">{{ errorMessage }}</div>
 				</form>
