--- a/src/app/views/forgotpassword/forgotpassword.page.html
+++ b/src/app/views/forgotpassword/forgotpassword.page.html
@@ -9,7 +9,8 @@
 
 			<ion-card-content>
 				<form (ngSubmit)="forgotPassword()" [formGroup]="forgotPasswordForm">
-					<ion-input formControlName="email" type="email" placeholder="Username"></ion-input>
+					<ion-input formControlName="email" type="email" placeholder="Email"></ion-input>
+          <div class="inline-error" [ngClass]="{'is-error': forgotPasswordForm.get('email').dirty && forgotPasswordForm.get('email').invalid}">Please enter a valid email address</div>
 					<ion-button mode="ios" type="submit" [disabled]="formDisabled">Submit</ion-button>
 					<div class="error" [ngClass]="{'is-error': state === 'error'}">{{ errorMessage }}</div>
 				</form>
