add no scroll-y for login ion-content

--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false" class="ion-padding " scroll-y="false">
 
 	<div class="content-wrapper column">
 		<ion-card class="content-prompt" [ngClass]="{ 'loading': state === 'loading'}">
