--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
@@ -16,7 +16,7 @@ ion-content {
         line-height: 45px;
     }
 
-    h1, p.summary-description {
+    p.summary-description {
         padding-left: 6px;
         padding-right: 6px;
     }
@@ -32,7 +32,7 @@ ion-content {
     .button-wrap {
         width: 100%;
         text-align: center;
-        padding-bottom: 20px;
+        padding-bottom: 54px;
         margin-top: 54px;
 
         button {
