reset password copy

--- a/src/app/core/components/forgotpasswordmodal/forgotpasswordmodal.component.html
+++ b/src/app/core/components/forgotpasswordmodal/forgotpasswordmodal.component.html
@@ -1,11 +1,10 @@
 <ion-content overflow-scroll="false" no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="modal-wrapper">
-    <h1 class="header">Send Email</h1>
-    <p>If you have an account with us, you will receive a password reset email.</p>
+    <h1 class="header">Reset Password</h1>
+    <p>If you have an account with us, you will receive an email from us with instructions on how to reset your password. </p>
 
     <div class="button-group">
-      <ion-button mode="ios" color="danger" (click)="closeModal()"><span>No</span></ion-button>
-      <ion-button mode="ios" (click)="confirmSendEmail()"><span>Yes</span></ion-button>
+      <ion-button mode="ios" (click)="confirmSendEmail()"><span>OK</span></ion-button>
     </div>
   </div>
 </ion-content>
