revert bg img style

--- a/src/app/views/login/login.page.scss
+++ b/src/app/views/login/login.page.scss
@@ -1,6 +1,5 @@
 ion-content {
-    // --background: url(../../../assets/images/background-login.svg) -24px 42px fixed;
-    --background: url(../../../assets/images/background-login.svg) center/ cover fixed;
+    --background: url(../../../assets/images/background-login.svg) -24px 42px fixed;
 }
 
 ion-card-title {
