bugfix: Added 'rows' property to ion-textarea in order to properly satisfy height'

--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
@@ -33,7 +33,7 @@
         >
           Why did you include this recipe in your meal plan?
         </p>
-        <ion-textarea formControlName="reason" placeholder="Type response here..." required></ion-textarea>
+        <ion-textarea formControlName="reason" placeholder="Type response here..." rows="6" required></ion-textarea>
 
         <p
           class="questions"
@@ -43,7 +43,7 @@
         >
           How was it?
         </p>
-        <ion-textarea formControlName="feeling" placeholder="Type response here..." required></ion-textarea>
+        <ion-textarea formControlName="feeling" placeholder="Type response here..." rows="6" required></ion-textarea>
 
         <div class="question-group">
           <p
